# maest-infer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/maest_infer/: __about__.py  __init__.py  checkpoints.py  clean_api.py  configs.py  discogs_labels.py  layers.py  loading.py  maest.py  model.py
src/maest_infer/config/: checkpoints.toml
src/maest_infer/data/: checkpoints.json
src/maest_infer/helpers/: __init__.py  melspectrogram.py  vit_helpers.py
tests/: test_baseline_regression.py  test_device_resolution.py  test_import.py  test_session_contract.py  test_weights_liveness.py
tests/fixtures/: baseline_discogs-maest-5s-pw-129e.npz
tools/: capture_baseline.py  check_weights_liveness.py
