[project]
name = "maest-infer"
version = "0.1.0"
description = "MAEST inference-only package for music audio classification using efficient spectrogram transformers"
authors = [
    { name = "Pablo Alonso", email = "pablo.alonso@upf.edu" }
]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "audio",
    "music",
    "classification",
    "transformer",
    "deep-learning",
    "pytorch",
    "inference",
    "maest",
    "spectrogram",
    "mir",
    "music-information-retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "timm>=0.9,<1.0",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/palonso/maest"
Repository = "https://github.com/palonso/maest"
Documentation = "https://github.com/palonso/maest#readme"
Issues = "https://github.com/palonso/maest/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maest_infer"]

[tool.hatch.build]
include = [
    "src/maest_infer/**/*.py",
    "src/maest_infer/py.typed",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
