[project]
name = "maest-infer"
dynamic = ["version"]
description = "MAEST inference-only package for music audio classification using efficient spectrogram transformers"
authors = [
    { name = "Pablo Alonso", email = "pablo.alonso@upf.edu" }
]
maintainers = [
    { name = "Package Maintainers" }
]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "audio",
    "music",
    "classification",
    "transformer",
    "deep-learning",
    "pytorch",
    "inference",
    "maest",
    "spectrogram",
    "mir",
    "music-information-retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    # torchaudio's newest PyPI release (2.11.0) lags torch's newest (2.13.0)
    # by two minor versions and recent torchaudio releases pin an exact
    # matching torch version (torchaudio 2.10.0 requires torch==2.10.0);
    # 2.11.0 is the newest verified-compatible pair for both, so the floor
    # tracks that pairing rather than torch's absolute latest.
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    # numpy>=2.3 requires Python>=3.11 and numpy>=2.5 requires Python>=3.12;
    # 2.2.6 is the newest 2.x release still compatible with this package's
    # Python>=3.10 floor (uv's resolver still floats higher, up to 2.5.x, on
    # the 3.11/3.12/3.13 legs of the split lockfile).
    "numpy>=2.2.6",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/palonso/maest"
Repository = "https://github.com/palonso/maest"
Documentation = "https://github.com/palonso/maest#readme"
Issues = "https://github.com/palonso/maest/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/maest_infer/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maest_infer"]

[tool.hatch.build]
include = [
    "src/maest_infer/**/*.py",
    "src/maest_infer/py.typed",
    "src/maest_infer/config/*.toml",
]
exclude = [
    "src/maest_infer/data/checkpoints.json",
]

[tool.pytest.ini_options]
markers = [
    "network: hits real network endpoints (deselected by default, run with -m network)",
]
addopts = "-m 'not network'"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "requests>=2.31",
]
